fix linkedin alignment

--- a/src/SecurityModule/pages/LoginPage/assets/scss/styles.scss
+++ b/src/SecurityModule/pages/LoginPage/assets/scss/styles.scss
@@ -10,7 +10,7 @@
 
     &.linkedin {
         background: url("../image/linked_in.svg") no-repeat;
-        background-position: 8px 9px;
+        background-position: 8px 8.5px;
     }
 
     &.azure {
